fixed responsive error when height too low

--- a/app/music/music.css
+++ b/app/music/music.css
@@ -175,4 +175,14 @@
     }
 }
 
+@media (max-height: 690px) {
+    .link-grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 50% 1fr 1fr 1fr 1fr 1fr 1fr;
+        height: 100%;
+        width: 100%;
+        max-width: 500px;
+        margin-bottom: calc(51px + 0.25rem);
+    }
+}
 
